--- a/css/styles.css
+++ b/css/styles.css
@@ -93,10 +93,10 @@ h2 {
     z-index: 1;
     border-radius: 10px;
 }
-.logo:hover {
+.header:hover .logo{
     border-radius: 20%;
 }
-.me:hover {
+.header:hover .me {
     bottom: 100px;
     left: calc(50% - 40px);
     width: 80px;
